clusters/production/umami/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: umami
  labels:
    name: umami
    owner: platform
  annotations:
    linkerd.io/inject: disabled
