clusters/production/umami/ingress-tailscale.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: umami-tailscale
  namespace: umami
  annotations:
    tailscale.com/proxy-group: tailscale-ingress
    tailscale.com/hostname: umami
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - umami
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: umami
                port:
                  number: 3000
